[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game.gd" type="Script" id=2]
[ext_resource path="res://objects/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/enemy.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 93.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 148, 9.75 )

[node name="game" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="." index="0"]
margin_left = -20.0
margin_top = -19.0
margin_right = 276.0
margin_bottom = 168.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="bullets" type="Node2D" parent="." index="1"]

[node name="enemies" type="Node2D" parent="." index="2"]

[node name="enemy" parent="enemies" index="0" instance=ExtResource( 4 )]
position = Vector2( 128, 75 )

[node name="enemyspawntimer" type="Timer" parent="." index="3"]
wait_time = 60.0

[node name="StaticBody2D" type="StaticBody2D" parent="." index="6"]
collision_layer = 30
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( -10, 74 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D" index="1"]
position = Vector2( 266, 74.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D" index="2"]
position = Vector2( 128, -9.75 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D" index="3"]
position = Vector2( 128, 159 )
shape = SubResource( 2 )

[node name="overlay" type="ColorRect" parent="." index="7"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -20.0
margin_top = -19.0
margin_right = 276.0
margin_bottom = 168.0
mouse_filter = 2
color = Color( 0.733333, 0.733333, 0.733333, 1 )

[node name="player" parent="." index="8" instance=ExtResource( 3 )]
position = Vector2( 128, 75 )
_current_possessing_node = NodePath("../enemies/enemy")

[node name="Label" type="Label" parent="." index="9"]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="player_die" from="enemies/enemy" to="." method="_on_player_die"]
[connection signal="shoot_bullet" from="enemies/enemy" to="." method="_on_shoot_bullet"]
[connection signal="timeout" from="enemyspawntimer" to="." method="_on_enemyspawntimer_timeout"]
